--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.5.2",
     "typewriter-effect": "^2.21.0"
   },
