--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.3.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
     "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.5.2",
     "typewriter-effect": "^2.21.0"
